--- a/docs/components.tex
+++ b/docs/components.tex
@@ -1,4 +1,4 @@
-\chapter{Komponenty systemu}
+\chapter{Struktura systemu}
 \label{sec:components}
 Aby uruchomić symulację, nie wystarczy uruchomić Gazebo z modelami, należy zadbać także o odpowiednie przekazywanie informacji pomiędzy pakietami.
 Wskazane jest przetestować modele, czy zachowują się poprawnie w prostych scenariuszach testowych, tak samo, jak testować się będzie program sterujący na modelu.
