--- a/docs/main.tex
+++ b/docs/main.tex
@@ -2,9 +2,10 @@
 \usepackage[polish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{fullpage}
 \usepackage{polski}
 \usepackage{graphicx}
-\usepackage{amsmath}
+\usepackage{amsmath}   
 \usepackage{nameref}
 \usepackage{wrapfig}
 \usepackage{hyperref}
@@ -31,7 +32,9 @@
 \input{robot.tex}
 \input{model.tex}
 \input{components.tex}
+\input{implementation.tex}
 \input{tests.tex}
+\input{ending.tex}
 \input{bibliography.tex}
 
 \end{document} 
